--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,11 @@
 
 /* 1. Variables */
 :root {
-    --main-color: #c4863a;
-    --sec-color: #188497;
-    --bg-color-1: #10141b;
-    --bg-color-2: #1b212c;
-    --bg-color-3: #031e23;
+    --main-color: #030e24;
+    --sec-color: #fbcb2b;
+    --bg-color-1: #ffffff;
+    --bg-color-2: #fbcb2b;
+    --bg-color-3: #0a154d;
     --main-transition: 0.3s linear;
 }
 
@@ -53,7 +53,7 @@ body {
     line-height: 2;
     font-weight: 400;
     padding-top: 77px;
-    color: var(--main-color);
+    color: #fbcb2b;
     background-color: var(--bg-color-1);
     overflow-x: hidden;
 }
@@ -74,13 +74,14 @@ body {
     line-height: 30px;
     font-size: 15px;
     font-weight: 400;
+    color: #0a154d;
 }
 .main-bold-p {
     margin-bottom: 30px;
     line-height: 30px;
     font-size: 20px;
     font-weight: 600;
-    color: #c4863a;
+    color: #0a154d;
 }
 .main-heading {
     padding: 150px 10px;
@@ -313,7 +314,7 @@ header .side-left ul.social-side-left li a:hover {
     z-index: 1;
 }
 .portfolio-field.content-part {
-    background-color: #031e23;
+    background-color: var(--bg-color-3)
 }
 .portfolio .section-moving-shape {
     position: absolute;
@@ -380,7 +381,7 @@ header .side-left ul.social-side-left li a:hover {
     bottom: 0;
     z-index: 1;
     font-size: 20px;
-    background-color: #031e23;
+    background-color: var(--bg-color-3);
     padding: 20px 40px;
     transform: translateX(-100%);
     transition: transform .3s ease;
@@ -391,11 +392,11 @@ header .side-left ul.social-side-left li a:hover {
     font-weight: 700;
     margin-bottom: 0;
     padding-bottom: 10px;
-    color: #c4863a;
+    color: var(--bg-color-2);
 }
 .portfolio-cat {
     font-size: 15px;
-    color: #c4863a;
+    color: var(--bg-color-2);
     line-height: 100%;
     font-weight: 400;
     margin-bottom: 0;
@@ -572,6 +573,31 @@ header .side-left ul.social-side-left li a:hover {
     width: 100px;
     animation: skills-shape 1s ease-in-out alternate infinite;
 }
+.skills .skills-content .features {
+    display: flex;
+    justify-content: space-between;
+}
+.skills .skills-content .features .box {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.skills .skills-content .features .box img {
+    width: 120px;
+    max-width: 100%;
+}
+.skills .skills-content .features .box span {
+    padding-top: 10px;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 12px;
+}
+
+
+
+
 @keyframes skills-shape {
     from {
         bottom: 40px;
@@ -652,7 +678,7 @@ header .side-left ul.social-side-left li a:hover {
     left: 16px;
     width: 3px;
     height: calc(100% - 50px);
-    background-color: var(--sec-color);
+    background-color: var(--bg-color-1);
 }
 .education .education-content .edu-holder .edu-box span.date {
     position: absolute;
@@ -661,7 +687,7 @@ header .side-left ul.social-side-left li a:hover {
     font-size: 15px;
     line-height: 30px;
     font-weight: 700;
-    color: var(--sec-color);
+    color: var(--bg-color-1);
     transition: 0.3s ease;
 }
 .education .education-content .edu-holder .edu-box:hover span.date {
@@ -674,7 +700,7 @@ header .side-left ul.social-side-left li a:hover {
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    border: 3px solid var(--sec-color);
+    border: 3px solid var(--bg-color-1);
 }
 .education .education-content .edu-holder .edu-box span.circle::before {
     content: '';
@@ -684,7 +710,7 @@ header .side-left ul.social-side-left li a:hover {
     width: 19px;
     height: 19px;
     border-radius: 50%;
-    background-color: var(--sec-color);
+    background-color: var(--bg-color-1);
     opacity: 0;
     transition: opacity var(--main-transition);
 }
@@ -880,6 +906,9 @@ header .side-left ul.social-side-left li a:hover {
     padding: 5px 2px 7px;
     width: 100%;
     height: 25px;
+}
+.contact .contact-content .form-field .contact-form{
+    color: var(--main-color);
 }
 .contact .contact-content .form-field div > div textarea {
     height: 150px;
@@ -1091,6 +1120,7 @@ footer ul.foot-social li a i {
 }
 footer .copyright-holder {
     margin-bottom: 0px;
+    color: #030e24;
 }
 
 /* 17. Resposinve Styles */
